pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxCannotHaveEntry.pkl
local source {
  ["foo"] = 1
}

res: Listing = new {
  ...source
}
